<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ksu4040e071.myapplication.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textview" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:id="@+id/etexam"
        android:layout_below="@+id/ethomework"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_etexam" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:id="@+id/ettime"
        android:layout_below="@+id/etexam"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_etnote" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/btsubmit"
        android:layout_below="@+id/ettest"
        android:layout_centerHorizontal="true"
        android:onClick="onSubmit"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ethomework"
        android:hint="@string/hint_ethomework"
        android:layout_below="@+id/textview"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ettest"
        android:hint="@string/hint_ettext"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
